syntax = "proto3";

package packet;

option go_package = "github.com/thearyanahmed/nlogx/pb/packet";

message Header {
  string key   = 1;
  string value = 2;
}

message LogRequest {
  repeated string topics  = 1;
  repeated Header headers = 2;
  bytes payload           = 3;
}

message LogResponse {
  bool success         = 1;
  string message       = 3;
  int64 streamed_count = 2;
}

service LogService {
  rpc StreamLog(stream LogRequest) returns (LogResponse) {};
}